Polish analyzer UI, harden backend audits, and add inline auth gates

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -35,5 +35,7 @@ ALERT_RECIPIENT=
 
 # AWS SES (optional)
 AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 SES_FROM_EMAIL=
 SES_CONFIGURATION_SET=
